add first swagger handler
