# docs/swagger.json
@@ -16,11 +16,87 @@
         "version": "1.0"
     },
     "host": "localhost:8000",
-    "basePath": "/api/v1",
-    "paths": {},
+    "paths": {
+        "/api/user/me": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get My Info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "jwt"
+                ],
+                "summary": "About My Info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Makhkets_internal_user_repository.AboutAccessToken"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Makhkets_pkg_errors.CustomError"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Makhkets_internal_user_repository.AboutAccessToken": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "isBanned": {
+                    "type": "boolean"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "Makhkets_pkg_errors.CustomError": {
+            "type": "object",
+            "properties": {
+                "customErr": {
+                    "type": "string"
+                },
+                "err": {},
+                "field": {
+                    "type": "string"
+                },
+                "file": {
+                    "type": "string"
+                },
+                "isNotWriteError": {
+                    "type": "boolean"
+                },
+                "isNotWriteMessage": {
+                    "type": "boolean"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     },
     "externalDocs": {
